--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ foreach(PACKAGE
   std_msgs
   visualization_msgs
   Eigen3
+  vision_msgs
+  ultralytics_ros
   tf2_ros)
 
   find_package(${PACKAGE} REQUIRED)
@@ -27,20 +29,23 @@ endforeach()
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
-# include_directories(/usr/include/eigen3)
+include_directories(${OpenCV_INCLUDE_DIRS})
+include_directories(/usr/include/opencv4/opencv2)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_executable(ego_agent src/ego_agent.cc)
 add_executable(following src/following.cc)
-add_executable(data src/csv_odom.cc)
+add_executable(detector src/car_detector.cc)
+target_link_libraries(detector ${TORCH_LIBRARIES})
+
 ament_target_dependencies(ego_agent rclcpp std_msgs sensor_msgs nav_msgs ackermann_msgs)
 ament_target_dependencies(following rclcpp std_msgs sensor_msgs nav_msgs ackermann_msgs)
-ament_target_dependencies(data rclcpp std_msgs sensor_msgs nav_msgs ackermann_msgs)
+ament_target_dependencies(detector rclcpp std_msgs sensor_msgs geometry_msgs vision_msgs ultralytics_ros)
 
 install(TARGETS
   ego_agent
   following
-  data
+  detector
   DESTINATION lib/${PROJECT_NAME}
 )
 
