--- a/package.xml
+++ b/package.xml
@@ -18,7 +18,11 @@
   <depend>ackermann_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>visualization_msgs</depend>
+  <depend>vision_msgs</depend>
+  <depend>ultralytics_ros</depend>
   <depend>Eigen3</depend>
+  <depend>opencv4</depend>
+  <depend>Torch</depend>
   <depend>tf2_ros</depend>
   
   <test_depend>ament_lint_auto</test_depend>
