Lots of changes...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(mpcc)
+project(f1tenth)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -21,7 +21,6 @@ foreach(PACKAGE
   visualization_msgs
   Eigen3
   vision_msgs
-  ultralytics_ros
   tf2_ros)
 
   find_package(${PACKAGE} REQUIRED)
@@ -36,17 +35,14 @@ include_directories(/usr/include/opencv4/opencv2)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_executable(ego_agent src/ego_agent.cc)
-add_executable(following src/car_following.cc)
-add_executable(detector src/car_detector.cc)
+add_executable(following src/following.cc)
 
 ament_target_dependencies(ego_agent rclcpp std_msgs sensor_msgs nav_msgs ackermann_msgs)
-ament_target_dependencies(following rclcpp std_msgs sensor_msgs ultralytics_ros ackermann_msgs)
-ament_target_dependencies(detector rclcpp std_msgs sensor_msgs geometry_msgs vision_msgs ultralytics_ros)
+ament_target_dependencies(following rclcpp std_msgs sensor_msgs ackermann_msgs)
 
 install(TARGETS
   ego_agent
   following
-  detector
   DESTINATION lib/${PROJECT_NAME}
 )
 
@@ -55,7 +51,8 @@ install(
   DESTINATION share/${PROJECT_NAME}/launch/
 )
 
-install(DIRECTORY include/
+install(
+  DIRECTORY include/
   DESTINATION include/
 )
 
